--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 
-.container
+.container,
+.tasks-grids
 {
 display: flex;
 }
@@ -12,12 +13,12 @@ display: flex;
   border-radius: 8px;
   background-color: #f9f9f9;
   min-height: 150px; 
-  /* display: flex; */
 }
 
 
 .tasks-block_new::before {
   content: "New Tasks";
+  width: 200px;
   display: block;
   font-weight: bold;
   font-size: 18px;
@@ -27,6 +28,7 @@ display: flex;
 
 .tasks-block_in-progress::before {
   content: "In Progress";
+  width: 200px;
   display: block;
   font-weight: bold;
   font-size: 18px;
@@ -36,6 +38,7 @@ display: flex;
 
 .tasks-block_done::before {
   content: "Done";
+  width: 200px;
   display: block;
   font-weight: bold;
   font-size: 18px;
