--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ display: flex;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #f2eaea;
   transition: background-color 0.3s;
 }
 
@@ -87,14 +87,17 @@ display: flex;
 
 
 .task[data-status="new"] {
-  border-color: #4CAF50;
+  /* border-color: #4CAF50; */
+  background-color: #78a4eb;
 }
 
 .task[data-status="in progress"] {
-  border-color: #FF9800;
+  /* border-color: #c8892a; */
+  background-color: #edd735;
 }
 
 .task[data-status="done"] {
-  border-color: #2196F3;
-  background-color: #E3F2FD;
+    
+  /* border-color: #2196F3; */
+  background-color: #0e9e24;
 }
